Corrected text, added overflow-hidden to links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,10 @@ body{
     @apply bg-cyan-400 flex items-center text-sm justify-center text-white px-4 py-2 cursor-pointer transition-colors hover:bg-cyan-300
 }
 
-.top-16{
-    top: 4rem;
+.top-20{
+    top: 5rem;
+}
+
+.top-10{
+    top: 2.5rem;
 }
